5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1680_2473.log
== TEST (2019-05-31 22:16:59) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19a+24)%30
e = (2b+4c+6d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(data > 31):
		dia = data -31
		print(dia,"-", 4,"-", ano)
	else: 
		print(data,"-", 3,"-", ano)
	
	                                                                              
-- ERROR:
File "XXXX", line 6
    d = (19a+24)%30
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:17:32) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(data > 31):
		dia = data -31
		print(dia,"-", 4,"-", ano)
	else: 
		print(data,"-", 3,"-", ano)
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:19:54) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(data > 31):
		dia = data -31
		print(dia,"-", 4,"-", ano)
	else: 
		print(data,"-", 3,"-", ano)
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:20:50) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(data > 31):
		dia = data -31
		print(dia,"-", 4,"-", ano)
	else: 
		print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:29:17) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		elif(data + 7 > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 3,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:30:23) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		elif(data + 7 > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 3,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:30:55) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		elif(data + 7 > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 3,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:33:30) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		elif(data + 7 > 31):
			dia = (data -31)+7
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 3,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:33:51) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			dia = (data -31)+7
			print(dia,"-", 5,"-", ano)
		elif(data + 7 > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 3,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 22:34:27) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			dia = (data -31)
			print(dia,"-", 5,"-", ano)
		elif(data + 7 > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 3,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:46:53) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			dia = (data -31)
			print(dia,"-", 5,"-", ano)
		elif(data + 7 > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 3,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:47:11) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			dia = (data -31)
			print(dia,"-", 5,"-", ano)
		elif(data + 7 > 31):
			dia = (data -31)+7
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 3,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:48:34) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			dia = (data -31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:50:20) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			print(data + 7)
			dia = (data - 31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:51:10) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			print(data)
			dia = (data - 31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:51:38) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			print(data - 31)
			dia = (data - 31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:52:09) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			print(data - 31)+7
			dia = (data - 31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:52:26) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			print(data - 31 +7)
			dia = (data - 31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:52:37) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			print(data - 31 +7)
			dia = (data - 31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:52:51) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			print(data - 31 +7)
			dia = (data - 31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:53:07) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 31):
			print(data - 31 +7)
			dia = (data - 31)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:54:42) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 61):
			print(data - 61)
			dia = (data - 61)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:55:27) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 61):
			print(data - 61 +7)
			dia = (data - 61 +7)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:55:45) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data+7 > 61):
			print(data - 61 +7)
			dia = (data - 61 +7)
			print(dia,"-", 5,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:59:19) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			print(data)
			#print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:59:38) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			print(data-18)
			#print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 07:59:58) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			print(data-38)
			#print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 08:00:53) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			data = data-38
			dia = (data)
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 08:01:05) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			data = data-38
			dia = (data)
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 08:01:28) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			data = data-38
			dia = (data)
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-01 08:01:52) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			data = data-38
			dia = (data)
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-01 08:02:19) 
-- CODE:
ano = int(input("Digite um ano, com quatro digitos: "))

a = ano%19
b = ano%4
c = ano%7
d = (19*a+24)%30
e = (2*b+4*c+6*d+5)%7
if(1900 <= ano <= 2099):
	data = 22 + d + e
	if(ano == 1954 or ano == 1981 or ano == 2049 or ano == 2076):
		if(data > 31):
			data = data-38
			dia = (data)
			print(dia,"-", 4,"-", ano)
		else: 
			print(data+7,"-", 4,"-", ano)
	else:		
		if(data > 31):
			dia = data -31
			print(dia,"-", 4,"-", ano)
		else: 
			print(data,"-", 3,"-", ano)
else:
	print("ano invalido")
	
	                                                                              
-- EXECUTION TIME:
0.8038
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
